[gd_scene load_steps=17 format=3 uid="uid://7axpi421xeat"]

[ext_resource type="Shader" uid="uid://rwyy28i6j2lo" path="res://shaders/rope.gdshader" id="1_hmrka"]
[ext_resource type="Script" uid="uid://bmui05khb003x" path="res://scripts/loop_path.gd" id="1_wm54x"]
[ext_resource type="Script" uid="uid://d3tepafsjs8x6" path="res://scripts/rope_loop.gd" id="2_wm54x"]
[ext_resource type="Script" uid="uid://1xluodkpnre3" path="res://addons/ropesim/RopeHandle.gd" id="3_jx6ql"]
[ext_resource type="Script" uid="uid://ir2ibimfvcgf" path="res://scripts/handle.gd" id="4_q673f"]
[ext_resource type="Script" uid="uid://b2shq2gjd4fvt" path="res://addons/ropesim/Rope.gd" id="4_qxpub"]
[ext_resource type="Shader" uid="uid://6nmpkoh01f2a" path="res://shaders/handle_circle.gdshader" id="5_4nl4v"]
[ext_resource type="Texture2D" uid="uid://c185w4i1qg0wv" path="res://sprites/placeholders/placeholder-base.png" id="6_jx6ql"]
[ext_resource type="Texture2D" uid="uid://g7e76vkcri2m" path="res://sprites/icon.svg" id="6_q673f"]

[sub_resource type="Curve2D" id="Curve2D_kyqv0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 4, 0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 12, 0, 0, 0, 0, 0, 16, 0, 0, 0, 0, 0, 20, 0, 0, 0, 0, 0, 24, 0, 0, 0, 0, 0, 28, 0, 0, 0, 0, 0, 32, 0, 0, 0, 0, 0, 36, 0, 0, 0, 0, 0, 40, 0, 0, 0, 0, 0, 44, 0, 0, 0, 0, 0, 48, 0, 0, 0, 0, 0, 52, 0, 0, 0, 0, 0, 56, 0, 0, 0, 0, 0, 60, 0, 0, 0, 0, 0, 64, 0, 0, 0, 0, 0, 68, 0, 0, 0, 0, 0, 72, 0, 0, 0, 0, 0, 76, 0, 0, 0, 0, 0, 80, 0, 0, 0, 0, 0, 84, 0, 0, 0, 0, 0, 88, 0, 0, 0, 0, 0, 92, 0, 0, 0, 0, 0, 96, 0, 0, 0, 0, 0, 100, 0, 0, 0, 0, 0, 104, 0, 0, 0, 0, 0, 108, 0, 0, 0, 0, 0, 112, 0, 0, 0, 0, 0, 116, 0, 0, 0, 0, 0, 120, 0, 0, 0, 0, 0, 124, 0, 0, 0, 0, 0, 128, 0, 0, 0, 0, 0, 132, 0, 0, 0, 0, 0, 136, 0, 0, 0, 0, 0, 140, 0, 0, 0, 0, 0, 144, 0, 0, 0, 0, 0, 148, 0, 0, 0, 0, 0, 152, 0, 0, 0, 0, 0, 156, 0, 0, 0, 0, 0, 160, 0, 0, 0, 0, 0, 164, 0, 0, 0, 0, 0, 168, 0, 0, 0, 0, 0, 172, 0, 0, 0, 0, 0, 176, 0, 0, 0, 0, 0, 180, 0, 0, 0, 0, 0, 184, 0, 0, 0, 0, 0, 188, 0, 0, 0, 0, 0, 192, 0, 0, 0, 0, 0, 196, 0, 0, 0, 0, 0, 200)
}
point_count = 51

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gdvn4"]
shader = ExtResource("1_hmrka")
shader_parameter/color_1 = Color(1, 0.883333, 0.3, 1)
shader_parameter/color_2 = Color(1, 0.748, 0.16, 1)
shader_parameter/scale = Vector2(0.025, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_4nl4v"]
radius = 40.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hmejf"]
shader = ExtResource("5_4nl4v")
shader_parameter/fill_color = Color(1, 1, 1, 1)
shader_parameter/radius = 0.5
shader_parameter/thickness = 0.2

[sub_resource type="Animation" id="Animation_q673f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.5]
}

[sub_resource type="Animation" id="Animation_4nl4v"]
resource_name = "pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/radius")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.7, 0.8, 0.7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hmejf"]
_data = {
&"RESET": SubResource("Animation_q673f"),
&"pulse": SubResource("Animation_4nl4v")
}

[node name="LoopPath" type="Path2D" node_paths=PackedStringArray("rope_line", "handle", "rope")]
curve = SubResource("Curve2D_kyqv0")
script = ExtResource("1_wm54x")
rope_line = NodePath("RopeLine")
handle = NodePath("RopeLine/Handle")
rope = NodePath("RopeLine/Rope")

[node name="RopeLine" type="Line2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_gdvn4")
instance_shader_parameters/rope_length = 400.0
points = PackedVector2Array(0, 0, 0, 4, 0, 8, 0, 12, 0, 16, 0, 20, 0, 24, 0, 28, 0, 32, 0, 36, 0, 40, 0, 44, 0, 48, 0, 52, 0, 56, 0, 60, 0, 64, 0, 68, 0, 72, 0, 76, 0, 80, 0, 84, 0, 88, 0, 92, 0, 96, 0, 100, 0, 104, 0, 108, 0, 112, 0, 116, 0, 120, 0, 124, 0, 128, 0, 132, 0, 136, 0, 140, 0, 144, 0, 148, 0, 152, 0, 156, 0, 160, 0, 164, 0, 168, 0, 172, 0, 176, 0, 180, 0, 184, 0, 188, 0, 192, 0, 196, 0, 200)
width = 20.0
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("2_wm54x")
target_rope_path = NodePath("Rope")
position_mode = 0
metadata/_custom_type_script = "uid://dfppmnngy2wx4"

[node name="Handle" type="Area2D" parent="RopeLine"]
position = Vector2(0, 200)
script = ExtResource("4_q673f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RopeLine/Handle"]
shape = SubResource("CircleShape2D_4nl4v")

[node name="RopeHandle" type="Marker2D" parent="RopeLine/Handle"]
script = ExtResource("3_jx6ql")
strength = 1.0
rope_path = NodePath("../../Rope")
metadata/_custom_type_script = "uid://1xluodkpnre3"

[node name="HandleCircle" type="Polygon2D" parent="RopeLine/Handle"]
z_index = 5
material = SubResource("ShaderMaterial_hmejf")
texture = ExtResource("6_q673f")
polygon = PackedVector2Array(-20, -20, -20, 20, 20, 20, 20, -20)
uv = PackedVector2Array(0, 0, 0, 128, 128, 128, 128, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RopeLine/Handle/HandleCircle"]
libraries = {
&"": SubResource("AnimationLibrary_hmejf")
}
autoplay = "pulse"

[node name="Rope" type="Node2D" parent="RopeLine"]
script = ExtResource("4_qxpub")
num_segments = 100
rope_length = 200.0
gravity = 0.0
damping = 10.0
render_line = false
line_width = 20.0
enable_collisions = true
collision_radius = 10.0
resolve_collisions_while_constraining = true
collision_mask = 8
metadata/_custom_type_script = "uid://b2shq2gjd4fvt"

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.54, 0, 0, 1)
z_index = 4
texture = ExtResource("6_jx6ql")

[connection signal="mouse_entered" from="RopeLine/Handle" to="RopeLine/Handle" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RopeLine/Handle" to="RopeLine/Handle" method="_on_mouse_exited"]
[connection signal="moved" from="RopeLine/Handle" to="." method="_on_handle_moved"]
